# btcmap-bot

./: .gitignore  LICENSE  README.md  bot.php  bot.py  composer.json  pyproject.toml
btcmap_bot/: bot.py
doc/: requirements.md
